deploy/ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimerdinger-ui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
