deploy/ui/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: heimerdinger-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: heimerdinger-ui
    weight: 100
    wildcardPolicy: None
